--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-infinite-scroll-component": "^5.0.5",
+    "react-lazyload": "^2.6.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.8.3",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "uuidv4": "^6.1.0"
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lazyload": "^2.6.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
