--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-senado",
+  "name": "busca-parlamentar",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,6 @@
     "react-lazyload": "^2.6.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-spinners": "^0.8.3",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "uuidv4": "^6.1.0"
