--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "uuidv4": "^6.1.0"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -58,6 +59,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "gh-pages": "^3.0.0",
     "prettier": "^2.0.5"
   }
 }
