Scripts de deploy do gh-pages

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "uuidv4": "^6.1.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
